--- a/BinanceBot.Tests/BinanceBot.Tests.csproj
+++ b/BinanceBot.Tests/BinanceBot.Tests.csproj
@@ -1,20 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\BinanceBot\BinanceBot.csproj" />
+    <ProjectReference Include="..\BinanceBot\BinanceBot.csproj"/>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-    <PackageReference Include="NUnit" Version="3.13.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4"/>
+    <PackageReference Include="NUnit" Version="3.13.1"/>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0"/>
+    <PackageReference Include="coverlet.collector" Version="3.0.2"/>
+    <PackageReference Include="Binance.Net" Version="7.2.5"/>
+    <PackageReference Include="NSubstitute" Version="4.2.2"/>
   </ItemGroup>
-
 </Project>
