--- a/BinanceBot/BinanceBot.csproj
+++ b/BinanceBot/BinanceBot.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Binance.Net" Version="7.2.5"/>
+    <PackageReference Include="ObjectDumper.NET" Version="3.3.13"/>
+  </ItemGroup>
 </Project>
